More alignment fixes.
svn path=/new.plone.org/trunk/; revision=24598

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1094,7 +1094,8 @@ dl.portlet li {
 	margin-left: 0;
 }
 
-#content img.tileImage {
+#content img.tileImage,
+#content img.newsImage {
 	float: right;
 	margin: 0 0 1em 1em;
 }
